<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>de.devx.project</groupId>
    <artifactId>devx-project</artifactId>
    <version>1.12-SNAPSHOT</version>
    <packaging>pom</packaging>

    <properties>
        <java.version>25</java.version>

        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <maven-plugin.version>3.15.2</maven-plugin.version>
        <maven-compiler.version>3.14.1</maven-compiler.version>
        <maven-api.version>3.9.11</maven-api.version>
        <maven-annotations.version>3.15.2</maven-annotations.version>
        <maven-core.version>3.9.11</maven-core.version>

        <spring.version>7.0.3</spring.version>

        <jakarta.version>2.0.2</jakarta.version>
        <jakarta-persistence.version>3.1.0</jakarta-persistence.version>
        <jakarta-servlet.version>6.1.0-M1</jakarta-servlet.version>

        <jackson.version>2.18.2</jackson.version>

        <lombok.version>1.18.42</lombok.version>

        <mapstruct.version>1.6.3</mapstruct.version>

        <freemarker.version>2.3.31</freemarker.version>

        <javaparser.version>3.27.1</javaparser.version>

        <junit.version>5.10.1</junit.version>
        <hamcrest.version>2.2</hamcrest.version>
        <assertj.version>3.26.3</assertj.version>
        <mockito.version>5.7.0</mockito.version>

        <swagger.version>2.2.31</swagger.version>
    </properties>

    <distributionManagement>
        <repository>
            <id>devx-repository</id>
            <name>GitHub Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/patrickf314/devx-project</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </distributionManagement>

    <modules>
        <module>bom</module>

        <module>annotations</module>

        <module>commons/api-model-commons</module>
        <module>commons/generator-commons</module>
        <module>commons/maven-plugin-commons</module>
        <module>commons/processor-commons</module>
        <module>commons/test-commons</module>
        <module>commons/typescript-client-commons</module>

        <module>spring-web/spring-web-annotation-processor</module>

        <module>angular/angular-client-generator</module>
        <module>angular/angular-client-maven-plugin</module>

        <module>hamcrest/hamcrest-matcher-generator</module>
        <module>hamcrest/hamcrest-matcher-annotation-processor</module>
        <module>hamcrest/hamcrest-matcher-dto-maven-plugin</module>
        <module>hamcrest/hamcrest-matcher-entity-processor</module>

        <module>assertj/assertj-assertion-generator</module>
        <module>assertj/assertj-assertion-maven-plugin</module>

        <module>playwright/playwright-client-generator</module>
        <module>playwright/playwright-client-maven-plugin</module>

        <module>react/react-client-generator</module>
        <module>react/react-client-api-maven-plugin</module>

        <module>typescript/typescript-client-api-maven-plugin</module>

        <module>spring-webmvc-test/spring-webmvc-test-generator</module>
        <module>spring-webmvc-test/spring-webmvc-test-annotation-processor</module>
        <module>commons/spring-web-processor-commons</module>
        <module>spring-webmvc-test/spring-webmvc-test-maven-plugin</module>

        <module>freemarker/freemarker-model-generator</module>
        <module>freemarker/freemarker-model-maven-plugin</module>

        <module>openapi/openapi-generator</module>
        <module>openapi/openapi-maven-plugin</module>
    </modules>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-plugin-plugin</artifactId>
                    <version>${maven-plugin.version}</version>
                    <executions>
                        <execution>
                            <id>default-descriptor</id>
                            <goals>
                                <goal>descriptor</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler.version}</version>
                    <configuration>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>${lombok.version}</version>
                            </path>
                            <path>
                                <groupId>org.mapstruct</groupId>
                                <artifactId>mapstruct-processor</artifactId>
                                <version>${mapstruct.version}</version>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
